Fix footer text wrapping, update mobile logo font size.

--- a/assets/css/components/footer.css
+++ b/assets/css/components/footer.css
@@ -6,6 +6,7 @@
     margin-left: var(--gap);
     margin-right: var(--gap);
     margin-top: 100px;
+    white-space: unset;
 }
 
 .gh-foot-inner {
