--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -11,7 +11,7 @@
     --color-dark-green: #125440;
     --color-light-blue: #b6e4ff;
     --color-medium-blue: #1470ad;
-    --color-dark-blue: #054A91;
+    --color-dark-blue: #054381;
     --color-yellow: #F9DC5C;
     --color-red: #D00000;
     --color-lavender: #FF84E8;
